force-app/main/default/objects/Speaker__c/fields/AvatarUrl__c.field-meta.xml
<CustomField>
    <fullName>AvatarUrl__c</fullName>
    <label>Avatar Url</label>
    <type>Url</type>
</CustomField>