force-app/main/default/objects/Speaker__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <label>Job Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>