force-app/main/default/objects/Speaker__c/fields/LinkedinUrl__c.field-meta.xml
<CustomField>
    <fullName>LinkedinUrl__c</fullName>
    <label>Linkedin Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>