force-app/main/default/objects/Speaker__c/fields/Short_Bio__c.field-meta.xml
<CustomField>
    <fullName>Short_Bio__c</fullName>
    <label>Short Bio</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>