force-app/main/default/objects/Speaker__c/fields/TwitterUrl__c.field-meta.xml
<CustomField>
    <fullName>TwitterUrl__c</fullName>
    <label>Twitter Url</label>
    <type>Url</type>
</CustomField>