force-app/main/default/objects/Speaker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>JobTitle__c</columns>
    <columns>Short_Bio__c</columns>
    <columns>LinkedinUrl__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>